# Agent-Reach

./: .env.example  AGENTS.md  constraints.txt  env.sh  pyproject.toml
.github/workflows/: daily-run-schedule.yml
agent_reach/: cli.py  config.py  doctor.py
agent_reach/daily_run/: __init__.py  akshare_adapter.py  auditor.py  backtest.py  baseline_fallback.py  channel_helpers.py  close_code_review.py  close_improvements.py  close_research.py  curve_analysis.py  doctor_cache.py  exa_cache.py  exa_client.py  experience.py  findskills_client.py  hot_news_collector.py  hot_news_deploy.py  hot_news_portal.py  intraday.py  intraday_push.py  job_health.py  lookback.py  macro_collector.py  mss_forecast.py  optimizer.py  pipeline.py  (+24 more)
config/: daily_run_history.example.json  daily_run_history_factors.example.json  daily_run_holidays.example.json  daily_run_portfolio.example.json  daily_run_portfolio.json  daily_run_settings.json  daily_run_snapshot.example.json
scripts/: 60s-local-setup.sh  60s-reboot-start.sh  daily-run-local-cron.sh  daily-run-local-setup.sh  dispatch-daily-run-local-cron.sh  findskills_json.mjs  gha-daily-run-resolve-job.sh  gha-daily-run-setup.sh  gha-set-secrets.sh  setup-agent-reach-config.sh
tests/: conftest.py  test_config.py  test_daily_run.py  test_daily_run_close_code_review.py  test_daily_run_close_improvements.py  test_daily_run_experts_toggle.py  test_daily_run_forecast.py  test_daily_run_hot_news.py  test_daily_run_hot_news_deploy.py  test_daily_run_hot_news_portal.py  test_daily_run_intraday.py  test_daily_run_morning_scan.py  test_daily_run_optimizations.py  test_daily_run_per_symbol.py  test_daily_run_perf.py  test_daily_run_phase2.py  test_daily_run_phase3.py  test_daily_run_phase5.py  test_daily_run_portfolio_manager.py  test_daily_run_prior_close.py  test_daily_run_report_push.py  test_daily_run_snapshot_schedule.py  test_daily_run_team.py  test_daily_run_vt_optimizations.py  test_daily_run_watchlist_manager.py  test_daily_run_week_forecast.py  test_daily_run_weekly.py  test_daily_run_weekly_insights.py  test_daily_run_weekly_report.py  test_daily_run_workflows.py  test_feishu.py  test_feishu_card.py  test_process.py
tools/: daily-run-wrapper.sh  fix-keyring-autologin.sh  install-post-login-no-password.sh  openlibextended-launcher.sh
(+18 files in other folders)
